Fix shapefile modal on small screens (i.e. change to %)

--- a/rifWebApplication/src/main/resources/css/rifx-css-modals.css
+++ b/rifWebApplication/src/main/resources/css/rifx-css-modals.css
@@ -809,6 +809,6 @@ circle {
 }
 
 #exposureSelect {
-    width: 150px;
+    width: 30%;
     margin-top: 5px;
 }
